Revert "sm8550-common: Drop aod auto brightness service"
This reverts commit e6266e92fb58ec6c1ef294c269b72ff2519d575c.

--- a/parts/AndroidManifest.xml
+++ b/parts/AndroidManifest.xml
@@ -65,6 +65,11 @@
         </service>
 
         <service
+            android:name=".doze.AodBrightnessService"
+            android:exported="true">
+        </service>
+
+        <service
             android:name=".edgesuppression.EdgeSuppressionService"
             android:exported="true">
         </service>
